--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -11,7 +11,7 @@
     <p class="Odd">Number 1 - I'm a class!</p>
     <div id="secondLine">Number 2 - I'm one ID.</div>
     <p class="Odd paragraph">Number 3 - I'm a class, but cooler!</p>
-    <div id="forthLine">Number 4 - I'm another ID.</div>
+    <div id="forthLine" class="paragraph">Number 4 - I'm another ID.</div>
     <p class="Odd">Number 5 - I'm a class!</p>
   </body>
 </html>
